fixtures/external/negative/embed-client-import/smoke.ts
// @mog-sdk/embed/client is bundle-private. It must not resolve from
// packed external consumers.

import { MogClient } from '@mog-sdk/embed/client';

void MogClient;
